syntax = "proto3";

package user;

option go_package = ".;pb";

message UserId {
  uint32 id = 1;
}

message User {
  uint32 id = 1;
	string username = 2;
	string email = 3;
}

service UserService {
  rpc GetUserById(UserId) returns (User) {};
}